tests/cases/compiler-development/artifact/errors/diagnostic-enum-duplicate-case.diagnostic
diagnostic error code=T0001 family=type message="duplicate enum case constructor 'A'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/enum-duplicate-case.ari" display="tests/cases/match/errors/enum-duplicate-case.ari" bytes=57
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/enum-duplicate-case.ari" line=3 column=3 end_line=3 end_column=4 byte_start=18 byte_end=19 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/enum-duplicate-case.ari:3:3\n   |\n 3 |   A,\n   |   ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/enum-duplicate-case.ari" line=2 column=3 end_line=2 end_column=4 byte_start=13 byte_end=14 message="previous enum case constructor 'A'"
  Snippet label=1 text="  --> tests/cases/match/errors/enum-duplicate-case.ari:2:3\n   |\n 2 |   A,\n   |   ^"
  Note index=0 location=none message="previous declaration is shown as a secondary label"
  Help index=0 location=none message="rename or remove one of the enum case constructors"
